fix header / chrome wrapping issues, update EUI to latest

--- a/src/components/chrome/_chrome.scss
+++ b/src/components/chrome/_chrome.scss
@@ -1,4 +1,12 @@
-.demoWrapper {
+.chrWrap {
   width: calc(100% - 3rem);
   margin-left: 3rem;
+  padding-top: $euiSizeXXL + $euiSizeS;
+}
+
+.chrHeader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
